Added @elementium path alias in exemple-app because it was overwritten

--- a/example-app/tsconfig.json
+++ b/example-app/tsconfig.json
@@ -5,6 +5,7 @@
     ],
     "compilerOptions": {
         "paths": {
+            "@elementium/*": ["./packages/*/src"],
             "@router": ["./example-app/src/router"],
             "@router/*": ["./example-app/src/router/*"],
             "@screens": ["./example-app/src/screens"],
