--- a/example-app/package.json
+++ b/example-app/package.json
@@ -22,6 +22,7 @@
         "@babel/core": "^7.20.0",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
+        "@sayem314/react-native-keep-awake": "^1.1.0",
         "@types/react": "^18.0.24",
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
