Changed eslint settings.react.version to "detect"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "settings": {
         "react": {
             "pragma": "React",
-            "version": "18.0.0"
+            "version": "detect"
         }
     },
     "rules": {
