--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -22,7 +22,10 @@
     "devDependencies": {
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@types/react": "^18.0.28",
+        "@typescript-eslint/eslint-plugin": "^5.52.0",
+        "@typescript-eslint/parser": "^5.52.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
+        "eslint": "^8.34.0",
         "metro-react-native-babel-preset": "^0.75.0",
         "react": "18.2.0",
         "react-native": "0.71.3",
