--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -17,11 +17,13 @@
     },
     "peerDependencies": {
         "react": "*",
-        "react-native": "*"
+        "react-native": "*",
+        "react-native-vector-icons": "*"
     },
     "devDependencies": {
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@types/react": "^18.0.28",
+        "@types/react-native-vector-icons": "^6.4.13",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
@@ -30,6 +32,7 @@
         "react": "18.2.0",
         "react-native": "0.71.3",
         "react-native-builder-bob": "^0.20.3",
+        "react-native-vector-icons": "^9.2.0",
         "typescript": "^4.9.5"
     },
     "react-native-builder-bob": {
