--- a/example-app/package.json
+++ b/example-app/package.json
@@ -16,7 +16,8 @@
         "react-native-gesture-handler": "^2.9.0",
         "react-native-reanimated": "^2.14.4",
         "react-native-safe-area-context": "^4.5.0",
-        "react-native-screens": "^3.20.0"
+        "react-native-screens": "^3.20.0",
+        "react-native-vector-icons": "^9.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
@@ -24,6 +25,7 @@
         "@babel/runtime": "^7.20.0",
         "@sayem314/react-native-keep-awake": "^1.1.0",
         "@types/react": "^18.0.24",
+        "@types/react-native-vector-icons": "^6.4.13",
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "metro-react-native-babel-preset": "0.73.7",
