Created scripts as shortcuts for workspaces

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "example-app": "yarn --cwd example-app",
         "bootstrap": "yarn && yarn example-app",
         "typecheck": "tsc --noEmit --composite false",
-        "lint": "eslint '**/*.{js,ts,tsx}'"
+        "lint": "eslint '**/*.{js,ts,tsx}'",
+        "eslint-config-react": "yarn workspace @elementium/eslint-config-react",
+        "eslint-config-react-typescript": "yarn workspace @elementium/eslint-config-react-typescript",
+        "native": "yarn workspace @elementium/native"
     }
 }
