--- a/example-app/package.json
+++ b/example-app/package.json
@@ -26,8 +26,11 @@
         "@sayem314/react-native-keep-awake": "^1.1.0",
         "@types/react": "^18.0.24",
         "@types/react-native-vector-icons": "^6.4.13",
+        "@typescript-eslint/eslint-plugin": "^5.53.0",
+        "@typescript-eslint/parser": "^5.53.0",
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
+        "eslint": "^8.34.0",
         "metro-react-native-babel-preset": "0.73.7",
         "typescript": "4.8.4"
     }
