--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -22,6 +22,8 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+        "@elementium/eslint-config-react": "workspace:^",
+        "@elementium/eslint-config-react-typescript": "workspace:^",
         "@types/react": "^18.0.28",
         "@types/react-native-vector-icons": "^6.4.13",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
