--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "lint": "eslint '**/*.{js,ts,tsx}'",
         "eslint-config-react": "yarn workspace @elementium/eslint-config-react",
         "eslint-config-react-typescript": "yarn workspace @elementium/eslint-config-react-typescript",
-        "native": "yarn workspace @elementium/native"
+        "native": "yarn workspace @elementium/native",
+        "tsconfig": "yarn workspace @elementium/tsconfig"
     }
 }
