--- a/example-app/package.json
+++ b/example-app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "elementiumexample",
+    "name": "@elementium/example-app",
     "version": "0.0.1",
     "private": true,
     "license": "MIT",
