--- a/example-app/android/app/build.gradle
+++ b/example-app/android/app/build.gradle
@@ -168,4 +168,8 @@ dependencies {
 }
 
 apply from: file("../../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+project.ext.vectoricons = [
+    iconFontsDir: "../../../node_modules/react-native-vector-icons/Fonts"
+]
 apply from: "../../../node_modules/react-native-vector-icons/fonts.gradle"
