--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -6,8 +6,8 @@
     "main": "lib/commonjs/index.js",
     "module": "lib/module/index.js",
     "types": "lib/typescript/src/index.d.ts",
-    "source": "src/index.tsx",
-    "react-native": "src/index.tsx",
+    "source": "src/index.ts",
+    "react-native": "src/index.ts",
     "files": [
         "lib/",
         "src/"
