Renamed package eslint-config-react to eslint-config

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "typecheck": "tsc --noEmit --composite false",
         "lint": "eslint '**/*.{js,ts,tsx}'",
         "example-app": "yarn workspace @elementium/example-app",
-        "eslint-config-react": "yarn workspace @elementium/eslint-config-react",
+        "eslint-config": "yarn workspace @elementium/eslint-config",
         "eslint-config-react-typescript": "yarn workspace @elementium/eslint-config-react-typescript",
         "native": "yarn workspace @elementium/native",
         "tsconfig": "yarn workspace @elementium/tsconfig"
