--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "typecheck": "tsc --noEmit --composite false",
         "lint": "eslint '**/*.{js,ts,tsx}'",
         "example-app": "yarn workspace @elementium/example-app",
+        "color": "yarn workspace @elementium/color",
         "eslint-config": "yarn workspace @elementium/eslint-config",
         "eslint-config-typescript": "yarn workspace @elementium/eslint-config-typescript",
         "native": "yarn workspace @elementium/native",
