--- a/packages/color/package.json
+++ b/packages/color/package.json
@@ -13,37 +13,22 @@
         "src/"
     ],
     "scripts": {
-        "prepack": "bob build"
+        "build": "yarn build:commonjs && yarn build:module && yarn build:declarations",
+        "build:commonjs": "tsc -p tsconfig-commonjs.json && babel lib/commonjs-temp --out-dir lib/commonjs --extensions \".js\" --delete-dir-on-start --config-file ./.babelrc-commonjs",
+        "build:module": "babel src --out-dir lib/module --extensions \".ts,.tsx\" --delete-dir-on-start",
+        "build:declarations": "tsc -p tsconfig-declarations.json"
     },
     "devDependencies": {
+        "@babel/cli": "^7.21.0",
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-typescript": "^7.21.0",
         "@elementium/eslint-config": "^0.0.1",
         "@elementium/eslint-config-typescript": "^0.0.1",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.34.0",
-        "react-native-builder-bob": "^0.20.3",
         "typescript": "^4.9.5"
-    },
-    "react-native-builder-bob": {
-        "source": "src",
-        "output": "lib",
-        "targets": [
-            [
-                "commonjs",
-                {
-                    "configFile": true,
-                    "babelrc": true
-                }
-            ],
-            "module",
-            [
-                "typescript",
-                {
-                    "project": "tsconfig.build.json"
-                }
-            ]
-        ]
     }
 }
