--- a/packages/color/package.json
+++ b/packages/color/package.json
@@ -23,8 +23,8 @@
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
-        "@elementium/eslint-config": "^0.0.1",
-        "@elementium/eslint-config-typescript": "^0.0.1",
+        "@elementium/eslint-config": "*",
+        "@elementium/eslint-config-typescript": "*",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
