Add react-native-gesture-handler as peer dependency of native package

--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -19,6 +19,7 @@
         "@elementium/color": "*",
         "react": "*",
         "react-native": "*",
+        "react-native-gesture-handler": "^2.9.0",
         "react-native-vector-icons": "*"
     },
     "devDependencies": {
