--- a/example-app/package.json
+++ b/example-app/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "license": "MIT",
     "scripts": {
-        "start": "react-native start",
+        "start": "react-native start --port 8082",
         "android": "react-native run-android --active-arch-only",
         "ios": "react-native run-ios"
     },
