--- a/example-app/package.json
+++ b/example-app/package.json
@@ -17,7 +17,7 @@
         "react-native-reanimated": "^2.14.4",
         "react-native-safe-area-context": "^4.5.0",
         "react-native-screens": "^3.20.0",
-        "react-native-vector-icons": "^9.2.0"
+        "react-native-vector-icons": "https://github.com/viniciusyoshioka/react-native-vector-icons"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
