Moved theme from native to theme package

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "eslint-config": "yarn workspace @elementium/eslint-config",
         "eslint-config-typescript": "yarn workspace @elementium/eslint-config-typescript",
         "native": "yarn workspace @elementium/native",
+        "theme": "yarn workspace @elementium/theme",
         "tsconfig": "yarn workspace @elementium/tsconfig",
-        "prepack": "yarn color prepack && yarn native prepack"
+        "prepack": "yarn color prepack && yarn native prepack && yarn theme prepack"
     }
 }
