--- a/example-app/tsconfig.json
+++ b/example-app/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../tsconfig.json",
     "references": [
         {"path": "../packages/native"},
+        {"path": "../packages/theme"},
     ],
     "compilerOptions": {
         "paths": {
