--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -39,6 +39,7 @@
         "react": "18.2.0",
         "react-native": "0.71.3",
         "react-native-builder-bob": "^0.20.3",
+        "react-native-paper": "^5.11.0",
         "react-native-vector-icons": "https://github.com/viniciusyoshioka/react-native-vector-icons",
         "typescript": "^4.9.5"
     },
