Building theme package before native as its a dependency in global prepack script

--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
         "native": "yarn workspace @elementium/native",
         "theme": "yarn workspace @elementium/theme",
         "tsconfig": "yarn workspace @elementium/tsconfig",
-        "prepack": "yarn color prepack && yarn native prepack && yarn theme prepack"
+        "prepack": "yarn color prepack && yarn theme prepack && yarn native prepack"
     }
 }
