Update tsconfig.json of theme package

--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -1,3 +1,14 @@
 {
     "extends": "../../tsconfig.json",
+    "references": [],
+    "compilerOptions": {
+        "paths": {},
+    },
+    "include": [
+        "src/**/*",
+    ],
+    "exclude": [
+        "lib",
+        "node_modules",
+    ],
 }
