--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -20,6 +20,8 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-typescript": "^7.23.2",
         "@elementium/eslint-config": "*",
         "@elementium/eslint-config-typescript": "*",
         "@types/react": "^18.0.28",
@@ -27,7 +29,6 @@
         "@typescript-eslint/parser": "^5.52.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.34.0",
-        "metro-react-native-babel-preset": "^0.75.0",
         "react": "18.2.0",
         "react-native-builder-bob": "^0.20.3",
         "typescript": "^4.9.5"
