Update tsconfig.json of native package

--- a/packages/native/tsconfig.json
+++ b/packages/native/tsconfig.json
@@ -4,4 +4,14 @@
         {"path": "../color"},
         {"path": "../theme"},
     ],
+    "compilerOptions": {
+        "paths": {},
+    },
+    "include": [
+        "src/**/*",
+    ],
+    "exclude": [
+        "lib",
+        "node_modules",
+    ],
 }
