--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -21,7 +21,7 @@
         "react": "*",
         "react-native": "*",
         "react-native-paper": "^5.11.0",
-        "react-native-vector-icons": "https://github.com/viniciusyoshioka/react-native-vector-icons"
+        "react-native-vector-icons": "^10.0.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
