--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -21,6 +21,7 @@
         "react": "*",
         "react-native": "*",
         "react-native-paper": "^5.11.0",
+        "react-native-safe-area-context": "^4.7.3",
         "react-native-vector-icons": "^10.0.0"
     },
     "devDependencies": {
