--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -20,8 +20,6 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-        "@babel/preset-env": "^7.23.2",
-        "@babel/preset-typescript": "^7.23.2",
         "@elementium/eslint-config": "*",
         "@elementium/eslint-config-typescript": "*",
         "@types/react": "^18.0.28",
@@ -29,6 +27,7 @@
         "@typescript-eslint/parser": "^6.8.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.52.0",
+        "metro-react-native-babel-preset": "^0.76.8",
         "react-native-builder-bob": "^0.23.1",
         "typescript": "^5.2.2"
     },
