--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -28,13 +28,13 @@
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@elementium/eslint-config": "*",
         "@elementium/eslint-config-typescript": "*",
-        "@types/react": "^18.0.28",
+        "@types/react": "^18.0.24",
         "@types/react-native-vector-icons": "^6.4.13",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.34.0",
-        "metro-react-native-babel-preset": "^0.75.0",
+        "metro-react-native-babel-preset": "0.76.8",
         "react-native-builder-bob": "^0.20.3",
         "typescript": "^4.9.5"
     },
