Extending tsconfig package in project tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "./packages/tsconfig/tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
@@ -7,31 +8,6 @@
             ],
         },
         "composite": true,
-        "allowSyntheticDefaultImports": true,
-        "allowUnreachableCode": true,
-        "allowUnusedLabels": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "isolatedModules": true,
-        "jsx": "react-jsx",
-        "lib": [
-            "esnext",
-        ],
-        "module": "esnext",
-        "moduleResolution": "node",
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitReturns": true,
-        "noImplicitUseStrict": false,
-        "noStrictGenericChecks": false,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-        "preserveValueImports": false,
-        "removeComments": true,
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "target": "esnext",
-        "useUnknownInCatchVariables": true,
     },
     "exclude": [
         "packages/*/lib",
