--- a/example-app/package.json
+++ b/example-app/package.json
@@ -12,7 +12,7 @@
         "@react-navigation/drawer": "^6.6.0",
         "@react-navigation/native": "^6.1.4",
         "react": "18.2.0",
-        "react-native": "0.71.3",
+        "react-native": "0.72.6",
         "react-native-gesture-handler": "^2.9.0",
         "react-native-paper": "^5.11.0",
         "react-native-reanimated": "^2.14.4",
@@ -24,6 +24,7 @@
         "@babel/core": "^7.20.0",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
+        "@react-native/metro-config": "^0.72.11",
         "@sayem314/react-native-keep-awake": "^1.1.0",
         "@types/react": "^18.0.24",
         "@types/react-native-vector-icons": "^6.4.13",
@@ -32,7 +33,10 @@
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.34.0",
-        "metro-react-native-babel-preset": "0.73.7",
+        "metro-react-native-babel-preset": "0.76.8",
         "typescript": "4.8.4"
+    },
+    "engines": {
+        "node": ">=16"
     }
 }
