--- a/example-app/package.json
+++ b/example-app/package.json
@@ -9,15 +9,15 @@
         "ios": "react-native run-ios"
     },
     "dependencies": {
-        "@react-navigation/drawer": "^6.6.0",
-        "@react-navigation/native": "^6.1.4",
+        "@react-navigation/drawer": "^6.6.6",
+        "@react-navigation/native": "^6.1.9",
         "react": "18.2.0",
         "react-native": "0.72.6",
-        "react-native-gesture-handler": "^2.9.0",
-        "react-native-paper": "^5.11.0",
-        "react-native-reanimated": "^2.14.4",
-        "react-native-safe-area-context": "^4.5.0",
-        "react-native-screens": "^3.20.0",
+        "react-native-gesture-handler": "^2.13.4",
+        "react-native-paper": "^5.11.1",
+        "react-native-reanimated": "^3.5.4",
+        "react-native-safe-area-context": "^4.7.3",
+        "react-native-screens": "^3.27.0",
         "react-native-vector-icons": "https://github.com/viniciusyoshioka/react-native-vector-icons"
     },
     "devDependencies": {
@@ -25,16 +25,16 @@
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
         "@react-native/metro-config": "^0.72.11",
-        "@sayem314/react-native-keep-awake": "^1.1.0",
+        "@sayem314/react-native-keep-awake": "^1.2.2",
         "@types/react": "^18.0.24",
         "@types/react-native-vector-icons": "^6.4.13",
-        "@typescript-eslint/eslint-plugin": "^5.53.0",
-        "@typescript-eslint/parser": "^5.53.0",
+        "@typescript-eslint/eslint-plugin": "^6.9.0",
+        "@typescript-eslint/parser": "^6.9.0",
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
-        "eslint": "^8.34.0",
+        "eslint": "^8.52.0",
         "metro-react-native-babel-preset": "0.76.8",
-        "typescript": "4.8.4"
+        "typescript": "^5.2.2"
     },
     "engines": {
         "node": ">=16"
