Replace eslint and typescript config to use new libraries

--- a/example-app/tsconfig.json
+++ b/example-app/tsconfig.json
@@ -1,5 +1,8 @@
 {
-    "extends": "../tsconfig.json",
+    "extends": [
+        "@vinicius1313/tsconfig/tsconfig.json",
+        "../tsconfig.json",
+    ],
     "references": [
         {"path": "../packages/native"},
         {"path": "../packages/theme"},
