--- a/example-app/package.json
+++ b/example-app/package.json
@@ -30,6 +30,8 @@
         "@types/react-native-vector-icons": "^6.4.13",
         "@typescript-eslint/eslint-plugin": "^6.9.0",
         "@typescript-eslint/parser": "^6.9.0",
+        "@vinicius1313/eslint-config": "^1.0.0",
+        "@vinicius1313/tsconfig": "^1.0.0",
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.52.0",
