--- a/packages/color/package.json
+++ b/packages/color/package.json
@@ -23,10 +23,10 @@
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@babel/preset-env": "^7.23.2",
         "@babel/preset-typescript": "^7.23.2",
-        "@elementium/eslint-config": "*",
-        "@elementium/eslint-config-typescript": "*",
         "@typescript-eslint/eslint-plugin": "^6.8.0",
         "@typescript-eslint/parser": "^6.8.0",
+        "@vinicius1313/eslint-config": "^1.0.0",
+        "@vinicius1313/tsconfig": "^1.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.52.0",
         "typescript": "^5.2.2"
