--- a/packages/color/tsconfig.json
+++ b/packages/color/tsconfig.json
@@ -1,5 +1,8 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": [
+        "@vinicius1313/tsconfig/tsconfig.json",
+        "../../tsconfig.json",
+    ],
     "references": [],
     "compilerOptions": {
         "paths": {},
