--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -26,12 +26,12 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-        "@elementium/eslint-config": "*",
-        "@elementium/eslint-config-typescript": "*",
         "@types/react": "^18.0.24",
         "@types/react-native-vector-icons": "^6.4.16",
         "@typescript-eslint/eslint-plugin": "^6.8.0",
         "@typescript-eslint/parser": "^6.8.0",
+        "@vinicius1313/eslint-config": "^1.0.0",
+        "@vinicius1313/tsconfig": "^1.0.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint": "^8.52.0",
         "metro-react-native-babel-preset": "0.76.8",
