--- a/packages/native/tsconfig.json
+++ b/packages/native/tsconfig.json
@@ -1,5 +1,8 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": [
+        "@vinicius1313/tsconfig/tsconfig.json",
+        "../../tsconfig.json",
+    ],
     "references": [
         {"path": "../color"},
         {"path": "../theme"},
